--- a/UdbService/appsettings.json
+++ b/UdbService/appsettings.json
@@ -9,5 +9,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "PrimaryDomain": "smtp.gmail.com",
+    "PrimaryPort": "587",
+    "SecondayDomain": "smtp.live.com",
+    "SecondaryPort": "587",
+    "UsernameEmail": "sha0ffat@gmail.com",
+    "UsernamePassword": "Gma$7831132",
+    "FromEmail": "fromEmail",
+    "ToEmail": "toEmail",
+    "CcEmail": "ccEmail"
+  }
 }
